--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "@hudoro/idate",
   "version": "0.0.1",
   "description": "Convert any date format to Indonesian date format",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p ."
   },
   "author": "Prawito Hudoro",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "typescript": "^4.3.5"
+  }
 }
